created page for create new post

--- a/blog/templates/blog/new_post.html
+++ b/blog/templates/blog/new_post.html
@@ -1,6 +1,21 @@
 {% extends 'blog/base.html' %}
-
+{% load crispy_forms_tags %}
 
 {% block content%}
-   <h1>About Page!</h1>
+<div class = "content-section">
+   <form  method = "POST"> {% csrf_token %}
+       <fieldset class="form-group">
+           <legend class="border-bottom mb-4">Create a new post</legend>
+           {{ form |crispy }}
+       </fieldset>
+       <div class = "form-group">
+           <button class = "btn btn-outline-info" type = "submit">Publish </button>
+       </div>
+   </form>
+
+</div>
+
+
+
+
 {% endblock %}
