added posts count page

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,8 +12,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
         <!--Include css files from static files-->
-        <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css'%}"> {% if title %}
-        <title>Django Blog - {{ title }}</title>
+        <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css'%}"> {% if user.is_authenticated %}
+        <title>Django Blog - {{ user.username }}</title>
         {% else %}
         <title> Django Blog</title>
         {% endif %}
@@ -40,9 +40,15 @@
             <span class="navbar-toggler-icon"></span>
             </button>
                     <div class="collapse navbar-collapse" id="navbarToggle">
+
                         <div class="navbar-nav mr-auto">
-                            <a class="nav-item nav-link" {% if user.is_authenticated %} href="{% url 'new-post' %}" {% else %} href="{% url 'login' %}" {% endif %}>
-                Create a new post</a>
+                            {% if user.is_authenticated %}
+                                <a class="nav-item nav-link" href="{% url 'new-post' %}"> Create a new Post</a> 
+                            {% endif %}
+
+                            {% if user.is_superuser %}
+                                <a class="nav-item nav-link" href="{% url 'user_posts_count' %}"> Admin Page</a> 
+                            {% endif %}
                         </div>
                         <!-- Navbar Right Side -->
                         <div class="navbar-nav">
