--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -6,7 +6,7 @@
         <div class="media-body">
           <div class="article-metadata">
             <a class="mr-2" href="#">{{ post.author }}</a>
-            <small class="text-muted">{{ post.post_date |date:"F d, Y" }}</small>
+            <small class="text-muted">{{ post.post_date |date:"F d, Y f" }}</small>
           </div>
           <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
           <p class="article-content">{{ post.content }}</p>
