--- a/blog/templates/blog/word_count.html
+++ b/blog/templates/blog/word_count.html
@@ -13,7 +13,7 @@
             </fieldset>
         </form>
         {% if word %} 
-            The word "{{word}}" appearse {{count}} times in all posts content 
+            The word "{{word}}" appears {{count}} times in all posts content 
         {% endif %}
     </div>
 
