--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -2,7 +2,8 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <div class = "content-section">
-        <form  method = "POST"> {% csrf_token %}
+        <form  method = "POST"> 
+            {% csrf_token %} 
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Log In</legend>
                 {{ form|crispy }}
